--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
             src: url("./Roboto-Medium.ttf")
         }
 
+        body{
+            max-width: 100vw
+        }
+
         * {
             margin: 0;
         }
@@ -52,18 +56,6 @@
             transition: all 0.2s ease;
         }
 
-        button:hover {
-            top: -1px;
-            -webkit-transform: rotateX(5deg);
-            -moz-transform: rotateX(5deg);
-            -ms-transform: rotateX(5deg);
-            transform: rotateX(5deg);
-        }
-
-        button:active {
-            /* top: 0px; */
-        }
-
         #submit,
         #next {
             float: right;
@@ -90,44 +82,15 @@
             background: #4bb078;
         }
 
-        #submit:hover{
-            box-shadow: 0px 10px 10px rgba(15, 165, 60, 0.2);
-        }
-
-        #submit:active,
-        #start:active {
-            box-shadow: 0px 0px 0px rgba(15, 165, 60, 0.0);
-            background: rgba(20, 224, 133, 1);
-        }
-
         #next {
             border-bottom: 1px solid rgba(28, 227, 227, 0.5);
             background: #2196f3;
-        }
-
-        #next:hover {
-            box-shadow: 0px 0px 0px rgba(15, 155, 165, 0.2);
-        }
-
-        #submit:active {
-            box-shadow: 0px 0px 0px rgba(15, 155, 165, 0);
-            background: rgb(20, 51, 224);
         }
 
         #previous {
             border-bottom: 1px solid rgba(227, 28, 78, 0.5);
             background: #f32121;
         }
-
-        #previous:hover {
-            box-shadow: 0px 0px 0px rgba(165, 15, 85, 0.2);
-        }
-
-        #previous:active {
-            box-shadow: 0px 0px 0px rgba(165, 15, 85, 0);
-            background: rgb(20, 51, 224);
-        }
-
         a {
             text-decoration: none;
             color: white;
@@ -411,7 +374,7 @@
 
         function checkState(state) {
             if (state === 0) {
-                console.log(state)
+                // console.log(state)
                 document.getElementById('start').style.display = 'initial'
                 document.getElementById('questions').style.display = 'none'
                 document.getElementById('finish').style.display = 'none'
@@ -441,7 +404,7 @@
         var welcTemp = 1
         setInterval(() => {
             document.getElementById('welcome').innerText = welcomeArr[welcTemp];
-            console.log(welcTemp);
+            // console.log(welcTemp);
             ++welcTemp;
             welcTemp = welcTemp % 3
         }, 2000);
@@ -515,7 +478,7 @@
             }
         }
 
-        console.log(obj1, obj)
+        // console.log(obj1, obj)
 
         // document.getElementById('name').innerHTML = obj.name
 
@@ -624,7 +587,7 @@
         }
 
         function previous() {
-            console.log(questions)
+            // console.log(questions)
             if (i === 0) return
             if (i === 1) previousDom.style.display = 'none'
             if (i === length - 1) {
@@ -673,7 +636,7 @@
                 else ans += '6'
             }
             window.location.hash = 'question=' + qNum + '&ans=' + ans
-            console.log(ans)
+            // console.log(ans)
         }
 
         function submit() {
@@ -717,7 +680,7 @@
             clearSelect()
             cl = ref.className
             ref.className += ' select'
-            console.log(cl)
+            // console.log(cl)
         }
 
         function clearSelect() {
