position bug fix

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         #next {
             float: right;
             right: 7px;
-            top: 60vh;
+            top: 70vh;
             border-radius: 50%;
             height: 8vh;
             width: 8vh;
@@ -72,7 +72,7 @@
         #previous {
             float: left;
             left: 7px;
-            top: 60vh;
+            top: 70vh;
             border-radius: 50%;
             height: 8vh;
             width: 8vh;
@@ -268,7 +268,7 @@
         .banner {
             position: absolute;
             z-index: 2;
-            top: 10%;
+            top: 14%;
             left: 0;
             width: 100%;
             height: 60%;
@@ -316,7 +316,7 @@
         <div class="banner">
             <div class="score" id="welcome">हे प्रश्न सोडवून बनु शक्ता आपण तलाठी|</div>
         </div>
-        <div style="position: absolute; top: 50%; left: 0;">
+        <div style="position: absolute; top: 57%; left: 0;">
             <div style="display: flex; flex-flow: row; width: 100vw; justify-content: center; top: 50%;">
                 <button onclick="callButton(1)" class="button">शुरु करा</button>
             </div>
@@ -364,7 +364,7 @@
             <div class="score">Your Score: <span id="score"></span></div>
             <div class="score2">Highest Score: <span id="highScore"></span></div>
         </div>
-        <div style="position: absolute; top: 50%; left: 0;">
+        <div style="position: absolute; top: 57%; left: 0;">
             <div style="display: flex; flex-flow: row; width: 100vw; justify-content: center; top: 50%;">
                 <button onclick="callButton(6)" class="button">अधिक चाचण्या घ्या</button>
             </div>
@@ -374,8 +374,8 @@
         <div id="modal" style="padding: 16px; border-radius: 5px; width: 75vw; background: white; display: flex; flex-direction: column; justify-content: center; align-items: center;">
             <div id="text" style="margin-bottom: 4px; font-size: 1.2em">Your details will be shared with Pariskha. Do you want to continue?</div>
             <div class="buttons" style="width: 100%; display: flex; flex-direction: row; justify-content: flex-end; align-items: center;">
-                <button class="button" style="background: rgb(118, 73, 146); position: unset; padding: 6px; font-size: 16px">Confirm</button>
-                <button class="button" style="background: rgb(183, 24, 24); margin-left: 9px; position: unset; padding: 6px; font-size: 16px" onclick="callButton(7)">Cancel</button>
+                <button class="button" style="background: rgb(118, 73, 146); margin-right: 9px; position: unset; padding: 6px; font-size: 16px">Confirm</button>
+                <button class="button" style="background: rgb(183, 24, 24); position: unset; padding: 6px; font-size: 16px" onclick="callButton(7)">Cancel</button>
             </div>
         </div>
     </div>
